<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HealthcareProject</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_no">Phone No</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sharedPrefFileName">com.sharedPref.MyFile</string>
    <string name="validationSignUp">Please SignUp First</string>
    <string name="emailValidation">Email address is not valid</string>
    <string name="emailRegex" tools:ignore="TypographyDashes">^[_A-Za-z0-9-]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="updatedSuccessfully">Updated Successfully</string>
    <string name="alreadyExists">Already Exists</string>
    <string name="phoneNoMinLength">Min length is 10</string>
    <string name="nameRegex">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456789 0</string>
    <string name="id">id</string>
    <string name="databaseProblem">Problem In Database</string>
    <string name="password">Password</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="as_patient">As Patient</string>
    <string name="as_doctor">As Doctor</string>
    <string name="as_pathology">As Pathology</string>
    <string name="imageExtension">.jpg</string>
    <string name="JPEG_">JPEG_</string>
    <string name="specialCharacter">_</string>
    <string name="take_photo_and_save_in_public_dir">Take Photo and save in Public Dir</string>
    <string name="take_photo_and_save_in_private_dir">Take Photo and save in Private Dir</string>
    <string name="take_photo">Take Photo</string>
    <string name="get_photo_from_gallery">Get Photo From Gallery</string>
    <string name="get_multiple_image">Get Multiple Image</string>
    <string name="get_single_image">Get Single Image</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Go to Settings to give Permission</string>
    <string name="permissionRequirement">Required Permissions are necessary for using this feature</string>
    <string name="pick_image">Pick Image</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="send">Send</string>
    <string name="registration_no">Registration No</string>
    <string name="speciality">Speciality</string>
    <string name="qualification">Qualification</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_call_screen">CallScreenActivity</string>
    <string name="com.healthcareproject.fileprovider">com.healthcareproject.fileprovider</string>
    <string name="yyyyMMdd_HHmmss">yyyyMMdd_HHmmss</string>
    <string name="online_consultation">Online Consultation</string>
    <string name="chat_list">Chat List</string>
    <string name="health_guru">Health Guru</string>
    <string name="facilities_to_avail">Facilities To Avail</string>
</resources>
