<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/red"/>

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/toolbar"
      android:layout_marginTop="@dimen/_50dp"
      android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_25dp"
        android:layout_marginRight="@dimen/_25dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText">

          <android.support.design.widget.TextInputEditText
               android:id="@+id/etName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPersonName"
               android:maxLines="1"
               android:hint="@string/name"
               android:digits="@string/nameRegex"/>

          </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25dp"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/HintText"
            app:errorTextAppearance="@style/ErrorText">


          <android.support.design.widget.TextInputEditText
              android:id="@+id/etEmail"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"
              android:maxLines="1"
              android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25dp"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/HintText"
            app:errorTextAppearance="@style/ErrorText"
            app:passwordToggleEnabled="true">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>


       <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText">


          <android.support.design.widget.TextInputEditText
              android:id="@+id/etPhoneNo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="phone"
              android:hint="@string/phone_no"
              android:maxLength="10"
              android:digits="1234567890"
              />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/butSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:layout_gravity="center"
            android:enabled="false"
            style="@style/Button"
            android:layout_marginBottom="@dimen/_25dp"/>

    </LinearLayout>
</ScrollView>
</RelativeLayout>