<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:contentPadding="10dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/ivUserImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_user_image_placeholder"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/tvDocNAme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/speciality"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/qu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/qualification"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/registration_no"
                android:textSize="17sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll"
            android:layout_toRightOf="@+id/l"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvSpeciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/tvqualification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/tvRegistrationNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="17sp" />

        </LinearLayout>



    </RelativeLayout>

</android.support.v7.widget.CardView>


