<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/red">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/ivShowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:src="@drawable/ic_more_vert_black_24dp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="3dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/ivDp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_signup_image_placeholder"
            app:civ_background_color="#000000"
            app:civ_border_width="5dp"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/hintColor"
            app:civ_shadow_radius="4" />


        <ImageView
            android:id="@+id/pickImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:src="@drawable/ic_signup_browse_image" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Availability"
        android:layout_below="@id/frameLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_25dp"
        android:textSize="18sp"/>

    <Switch
        android:id="@+id/switchAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAvailability"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/tvFacilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchAvailability"
        android:layout_marginTop="@dimen/_25dp"
        android:textColor="@color/black"
        android:text="@string/facilities_to_avail"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFacilities"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50dp"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">


            <ImageView
                android:id="@+id/ivChat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/conversation"
                android:scaleType="fitXY"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_list"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25dp">


            <ImageView
                android:id="@+id/ivQuery"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/pros_and_cons"
                android:scaleType="fitXY"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_guru"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>


